fix bug of user service